feat: add job stop
