# k8s-deploy/docs/swagger.json
@@ -298,7 +298,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/job.ClusterArgs"
+                            "$ref": "#/definitions/modules.ClusterArgs"
                         }
                     },
                     {
@@ -374,7 +374,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/job.ClusterArgs"
+                            "$ref": "#/definitions/modules.ClusterArgs"
                         }
                     },
                     {
@@ -727,12 +727,19 @@
                 "tags": [
                     "Job"
                 ],
-                "summary": "Get job by jobId",
+                "summary": "Update job status to stop, stop job",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "Job ID",
                         "name": "jobId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "jobStatus=stop",
+                        "name": "jobStatus",
                         "in": "path",
                         "required": true
                     },
@@ -756,10 +763,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/modules.Job"
-                                            }
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -1613,32 +1617,6 @@
                 }
             }
         },
-        "job.ClusterArgs": {
-            "type": "object",
-            "properties": {
-                "chart_name": {
-                    "type": "string"
-                },
-                "chart_version": {
-                    "type": "string"
-                },
-                "cover": {
-                    "type": "boolean"
-                },
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "name": {
-                    "type": "string"
-                },
-                "namespace": {
-                    "type": "string"
-                }
-            }
-        },
         "modules.Cluster": {
             "type": "object",
             "properties": {
@@ -1700,6 +1678,32 @@
                 }
             }
         },
+        "modules.ClusterArgs": {
+            "type": "object",
+            "properties": {
+                "chart_name": {
+                    "type": "string"
+                },
+                "chart_version": {
+                    "type": "string"
+                },
+                "cover": {
+                    "type": "boolean"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "namespace": {
+                    "type": "string"
+                }
+            }
+        },
         "modules.HelmChart": {
             "type": "object",
             "properties": {
@@ -1756,13 +1760,22 @@
                 "end_time": {
                     "type": "string"
                 },
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "id": {
                     "type": "integer"
+                },
+                "meta_data": {
+                    "$ref": "#/definitions/modules.ClusterArgs"
                 },
                 "method": {
                     "type": "string"
                 },
-                "result": {
+                "results": {
                     "type": "string"
                 },
                 "start_time": {
